# action-setup-vs

./: .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  LICENSE  Makefile  README.md  action.yml  cliff.toml  pyproject.toml  requirements.txt
.github/workflows/: action-vs.yml  dependency-review.yml  main.yml  push-tag.yml  release-tagger.yml  test-action.yml
