[project]
name            = "action-setup-vs"
description     = "Vapoursynt setup action"
version         = "0.0.0"
readme          = "README.md"
license         = "MIT"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
requires-python = ">=3.10"
dependencies    = ["vapoursynth>=72"]
